--- a/templates/projects/angular16/Templates/3-Files.xml
+++ b/templates/projects/angular16/Templates/3-Files.xml
@@ -19,9 +19,9 @@
       <xi:include xmlns:xi="http://www.w3.org/2001/XInclude" href="Sections/Files.xml"/>
       <pnp:WebSettings
         WelcomePage="Pages/Index.aspx"
-        SiteLogo="{sitecollection}/_catalogs/masterpage/<%= applicationname %>/images/compassion-white-logo.png"
+        SiteLogo="{sitecollection}/_catalogs/masterpage/<%= applicationName %>/images/compassion-white-logo.png"
         MasterPageUrl="{sitecollection}/_catalogs/MasterPage/oslo.master"
-        CustomMasterPageUrl="{sitecollection}/_catalogs/MasterPage/<%= applicationname %>/MasterPages/com-main.master"
+        CustomMasterPageUrl="{sitecollection}/_catalogs/MasterPage/<%= applicationName %>/MasterPages/com-main.master"
         />
     </pnp:ProvisioningTemplate>
   </pnp:Templates>
